# prompt-runner

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_drift.sh  run_supply_chain.sh  setup.sh
.claude/: settings.local.json
prompt_runner/: __init__.py  cli.py  mcp_client.py  openai_session.py  prompt_manifest.py  tool_catalog.py  toolspecs.json
prompt_runner/prompts/: Holomem-API-reference.md  drift_analysis.md  manifest.json  mcp_tools_reference.md  supply_chain.md
prompt_runs/drift/20251112-055102/: summary.drift_analysis.20251112-055102.md
prompt_runs/drift/20251112-055740/: summary.drift_analysis.20251112-055740.md
prompt_runs/drift/20251112-060140/: summary.drift_analysis.20251112-060140.md
prompt_runs/drift/20251112-095331/: summary.drift_analysis.20251112-095331.md
prompt_runs/drift/20251112-131355/: summary.drift_analysis.20251112-131355.md
prompt_runs/drift/20251112-151150/: summary.drift_analysis.20251112-151150.md
prompt_runs/drift/20251112-151952/: summary.drift_analysis.20251112-151952.md
tools/mcp/: holomem.mcp.config  loader.py  mcp_bridge.py  models.py
